# RAG-in-one

./: .env  Dockerfile  README.MD  README.md  app.py  pyproject.toml  requirements.txt
constants/: prompts.py  type.py
core/agentic_patterns/: reflection.py  tool_use.py
core/chunking/: agentic_chunking.py
core/hybrid_search/: keyword_wrapper.py
core/hybrid_search/vector_database/: jina_clip_wrapper.py
core/multimodal/: pyproject.toml
core/multimodal/colpali/: demo.ipynb  demo.py  readme.md
core/multimodal/colpali/.byaldi/test/embeddings/: embeddings_0.pt
core/multimodal/colpali/docs/: demo.ipynb  test.ipynb
core/query_router/: demo.ipynb  main.py
core/retrieval/: pre_retrieval.py  retrieval.py
core/vector_database/: faiss_wrapper.py  jina_clip_wrapper.py
docs/: agentic-patterns.md
model/: embedding.py  llm.py  sreaming_new.html  streaming.py
nl2sql/: base.py  db_instance.py  demo.ipynb  workflow.py
nl2sql/database/: mysql_connector.py  pgvector.ipynb  pgvector.py  postgresql_connector.py  sql_database.py  sql_factory.py
notebooks/: demo.ipynb  glm.demo.ipynb  multimodl_demo.ipynb  test.ipynb
notebooks/agentic_patterns/: reflection.ipynb  tool_use.ipynb
recall/: faiss_wrapper.py  jina_clip_wrapper.py  pre_retrieval.py  retrieval.py
router/: chat.py  streaming.py
test/: demo.ipynb  multimodl_demo.ipynb
trial/: stream.ipynb  streaming.html
utility/: db_state_machine.py  decorators.py  tools.py
