[tool.poetry]
name = "rag-in-one"
version = "0.1.0"
description = ""
authors = ["pillar <pillarliang21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
langchain-openai = "^0.2.2"
numpy = "^1.23.5"
pydantic = "^2.9.2"
openai = "^1.51.2"
faiss-cpu = "^1.9.0"
pillow = "^10.4.0"
sqlalchemy = "^2.0.35"
pgvector = "^0.3.5"
python-dotenv = "^1.0.1"
pdf2image = "^1.17.0"
instructor = "^1.5.2"
zhipuai = "^2.1.5.20230904"
langchain-community = "^0.3.2"
redis = "^5.1.1"
transformers = "^4.45.2"
torch = "2.0.1"
spacy = "3.7.*"
rank-bm25 = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
