[tool.poetry]
name = "rag-in-one"
version = "0.1.0"
description = ""
authors = ["pillar <pillarliang21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
langchain-openai = "*"
numpy = "*"
pydantic = "*"
openai = "*"
faiss-cpu = "*"
pillow = "*"
sqlalchemy = "*"
pgvector = "^0.3.5"
python-dotenv = "*"
pdf2image = "*"
instructor = "*"
zhipuai = "*"
langchain-community = "*"
redis = "*"
transformers = "*"
torch = "2.0.1"
spacy = "*"
rank-bm25 = "*"
py-nl2sql = "^0.0.3.dev1"
sse-starlette = "^2.1.3"
streamingjson = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
