[tool.poetry]
name = "multimodal"
version = "0.1.0"
description = ""
authors = ["pillar <pillarliang21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = { version = "*", source = "pytorch" }
torchvision = { version = "*", source = "pytorch" }
torchaudio = { version = "*", source = "pytorch" }
byaldi = "^0.0.4"
openai = "^1.47.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"